--- a/style.css
+++ b/style.css
@@ -23,13 +23,28 @@ body {
   align-items: center;
 }
 
-.container input {
-  width: 80%;
+.container label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
   height: 10%;
   padding: 10px;
   border-radius: 5px;
   margin-bottom: 5px;
 }
+
+.container label input {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+
+
+
+
 
 .container .tombol {
   padding: 10px;
