--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   font-size: 16px;
   width: 100%;
   height: 100vh;
+  position: relative;
 }
 
 .container {
@@ -101,6 +102,26 @@ body {
 
 .container .tombol .row .wide-space {
   width: 440px;
+}
+
+
+
+.warning {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  text-align: center;
+}
+
+.warning-none {
+  display: none;
 }
 
 
