--- a/style.css
+++ b/style.css
@@ -24,39 +24,17 @@ body {
   align-items: center;
 }
 
-.container label {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 90%;
-  height: 10%;
-  padding: 10px;
-  border-radius: 5px;
-  margin-bottom: 5px;
-}
-
-.container label input {
-  width: 100%;
-  height: 100%;
-  padding: 20px;
-  border-radius: 5px;
-  margin-bottom: 5px;
-}
-
-
-
-
 
 .container .tombol {
-  padding: 10px;
   width: 90%;
   height: 80%; ;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 1px 1px 1px 5px white;
   border-radius: 5px;
+  box-shadow: 1px 1px 1px 5px white;
+
 }
 
 .container .tombol .row {
@@ -66,26 +44,45 @@ body {
   align-items: center;
   width: 100%;
   height: 15%;
+  margin-bottom: 6px;
 
 }
 
 .container .tombol .row .key {
-  width: 70px;
-  height: 70px;
+  width: 90px;
+  height: 90px;
   border-radius: 5px;
-  margin: 5px;
+  margin: 1px; 
+  background-color: darkblue;
+  color: white;
+  font-weight: bolder;
+  font-size: 20px;
 }
 
 .container .tombol .row .wide-backspace {
   width: 120px;
+  background-color: #fff;
+  color: black;
+}
+
+.container .tombol .row .wide-esc {
+  width: 90px;
+  background-color: red;
 }
 
 .container .tombol .row .wide-tab {
   width: 95px;
+  background-color: #fff;
+  color: black;
+
+
 }
 
 .container .tombol .row .wide-cap {
   width: 120px;
+  background-color: #fff;
+  color: black;
+
 }
 
 .container .tombol .row .wide-enter {
@@ -94,14 +91,65 @@ body {
 
 .container .tombol .row .wide-shift {
   width: 150px;
+  background-color: #fff;
+  color: black;
+
+
 }
 
 .container .tombol .row .wide-shift-2 {
   width: 120px;
+  background-color: #fff;
+  color: black;
+
+
 }
 
 .container .tombol .row .wide-space {
-  width: 440px;
+  width: 425px;
+  background-color:red;
+
+}
+
+.container .tombol .row .ctrl,
+.container .tombol .row .win,
+.container .tombol .row .alt,
+.container .tombol .row .fn,
+.container .tombol .row .kiri,
+.container .tombol .row .bawah,
+.container .tombol .row .kanan,
+.container .tombol .row .atas {
+  background-color: #fff;
+  color: black;
+}
+
+.aktif {
+  font-size: 20px;
+  text-transform: uppercase;
+  background-color: #2cdf08;
+  color: #000;
+  font-weight: bold;
+  transform: scale(0.5);
+  transition: 0.5s;
+}
+
+.spesial {  
+  background-color: #000;
+  color: #fff;
+}
+
+
+#hapus {
+  background-color: red;
+  color: white;
+  border-radius: 5px;
+  padding: 5px;
+  margin-top: 5px;
+}
+
+#hapus:hover {
+  background-color: white;
+  color: red;
 }
 
 
