--- a/style.css
+++ b/style.css
@@ -29,11 +29,14 @@ body {
   width: 90%;
   height: 80%; ;
   display: flex;
+  gap: 29px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border-radius: 5px;
   box-shadow: 1px 1px 1px 5px white;
+  background-color: gray;
+  position: relative;
 
 }
 
@@ -43,17 +46,15 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 15%;
-  margin-bottom: 6px;
-
+  height: 14%;
 }
 
 .container .tombol .row .key {
-  width: 90px;
-  height: 90px;
+  width: 100px;
+  height: 100px;
   border-radius: 5px;
   margin: 1px; 
-  background-color: darkblue;
+  background-color: rgb(0, 0, 0);
   color: white;
   font-weight: bolder;
   font-size: 20px;
